Update Dockerfile and workflow to use PHP Apache version 8.2 and push latest tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
       id: docker_publish
       env:
         SOURCE_TAG: ${{steps.tag_name.outputs.SOURCE_TAG}}
-      run: docker login -u timinh -p ${{ secrets.DOCKER_TOKEN }} && docker push timinh/php-apache-mongo:latest && docker push timinh/php-apache-mongo:${{ steps.tag_name.outputs.SOURCE_TAG }}
+      run: docker login -u timinh -p ${{ secrets.DOCKER_TOKEN }} && docker push timinh/php-apache-mongo:${{ steps.tag_name.outputs.SOURCE_TAG }} && docker push timinh/php-apache-mongo:latest
